# bare-addon-rust

./: CMakeLists.txt  Cargo.toml  README.md  binding.rs  index.js  package.json
src/: lib.rs
